<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeMake</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- String From RegisterActivity -->
    <string name="title_activity_register">Registro</string>
    <string name="username_label">Usuario:</string>
    <string name="name_label">Nombre:</string>
    <string name="name_hint_label">Nombre</string>
    <string name="last_hint_label">Apellido</string>
    <string name="age_label">Edad:</string>
    <string name="age_hint_label">Ingrese Edad</string>
    <string name="phone_label">Telefono</string>
    <string name="phone_hint_label">Telefono/Celular</string>
    <string name="email_label">Email</string>
    <string name="email_hint_label">Ingrese Email</string>
    <string name="state_label">Departamento:</string>
    <string name="state_hint_label">Ingrese Departamento</string>
    <string name="city_label">Municipio:</string>
    <string name="city_hint_label">Ingrese Municipio</string>
    <string name="neighborhood_label">Barrio:</string>
    <string name="neighborhood_hint_label">Ingrese Barrio</string>
    <string name="profession_label">Profesion:</string>
    <string name="profession_hint_label">Profesion</string>
    <string name="skills_label">Habilidades:</string>
    <string name="skills_hint_label">Habilidades</string>
    <string name="alert_label">Alerta</string>
    <string name="no_name_alert">Error No ingreso Nombre</string>
    <string name="no_age_alert">Error No ingreso Edad</string>
    <string name="no_email_alert">Error No ingreso Email</string>
    <string name="no_lastname_alert">Error no ingreso Apellido</string>
    <string name="no_phone_alert">Error no ingreso Telefono</string>
    <string name="username_lentght_error">Error el Usuario debe ser de minimo 6 caracteres</string>
    <string name="name_lenght_error">Error el Nombre debe ser minimo de 4 caracteres</string>
    <string name="lasname_lenght_error">Error el Apellido debe ser minimo de 5 caracteres</string>
    <string name="age_lenght_error">Error la Edad debe ser minimo de 2 caracteres </string>
    <string name="phone_length_error">Error la longitud del Telefono debe ser de 7 a 10 caracteres</string>
    <string name="age_no_number_error">Error la Edad debe ser numerica</string>
    <string name="username_format_error">Error el Usuario no debe contener espacios</string>
    <string name="name_format_error">Error el Nombre no puede contener Digitos, Ni espacios</string>
    <string name="lastname_format_error">Error el Apellido no puede contener Digitos, Ni espacios</string>
    <string name="email_format_error">Error el Email debe tener el formato texto@texto.com</string>
    <string name="phone_format_error">Error el telfono debe solo contener caracteres numericos </string>
    <string name="no_profession_label">Error debe seleccionar alguna Profesion</string>
    <string name="no_skills_label">Error debe seleccionar alguna Habilidad</string>
    <string name="no_state_label">Error debe Seleccionar algun Departamento</string>
    <string name="no_city_label">Error debe Seleccionar algun Municipio/Ciudad</string>
    <string name="no_neighborhood_label">Error debe Seleccionar algun Barrio</string>
    <string name="age_less_than_18">Para registrarte debes ser mayor a 18 Años</string>
    <string name="password_label">Contraseña:</string>
    <string name="password_hint">Password</string>
    <string name="password_confirmation_hint">Confirmacion</string>
    <string name="no_username_alert">Error no ingreso el Usuario</string>
    <string name="no_password_alert">Error no ingreso Contraseña</string>
    <string name="no_password_confirmation_alert">Error no ingreso Confirmacion de Contraseña</string>
    <string name="password_length_error">Error la contraseña  debe ser minimo de 6 caracteres</string>
    <string name="confirmation_length_error">Error la Confirmacion de Contraseña  debe ser minimo de 6 caracteres</string>
    <string name="password_do_not_match_with_confirmation_error">Error las Contraseñas no Coinciden</string>
    <string name="password_confirmation_format_error">Error la confirmacion no debe contener espacios</string>
    <string name="password_format_error">Error la contraseña no debe contener espacios</string>
    <string name="sing_up_success_full">Registrado Correctamente</string>
    <string name="sing_up_error">Error al efectuar el registro codigo: </string>
    <string name="sing_up_ongoing">Registrando Por Favor Espere</string>

    <!-- String for Login Activity -->
    <string name="user_hint_text">Usuario</string>
    <string name="password_hint_text">Contraseña</string>
    <string name="parse_id_number">oqPVy34Q3lVwxi56FcVcGDishkY9Wg2JVL7ggBL4</string>
    <string name="parse_key_number">EbmtfciIe91q9GZWp9jnsrsjKAidqDA5UHBS3dvj</string>
    <string name="login_error">Sucedio un error al intentar acceder a la aplicacion. Codigo: </string>
    <string name="login_ongoing">Ingresando a la aplicacion por favor espere</string>
    <string name="invalid_login_credentials">Error en la combinacion de Usuario y Contraseña Por favor Verifique</string>
    <string name="network_problem">Error de red</string>
    <string name="email_not_verified">Error debe verificar, su email para poder ingresar a la aplicacion</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- String for Profile Activity -->
    <string name="profession_and_skills_label">Profesion/Habilidades</string>
    <string name="uploading_profile_picture_message">Subiendo Imagen de Perfil por favor espere</string>
    <string name="profile_picture_upload_success">Imagen de Perfil subida exitosamente</string>
    <string name="profile_picture_upload_error">Erro al subir Imagen de Perfil</string>
    <string name="downloading_profile_picture">Descargando imagen de Perfil espere por favor espere</string>
    <string name="edit_information_save_succesfull">Informacion Actualizada con Exito</string>
    <string name="edit_information_save_error">Error al Actualizar la Informacion</string>
    <string name="skills_label2">Habilidades:</string>
    <string name="profession_label2">Profesion:</string>
    <string name="title_activity_time_line">TimeLineActivity</string>

    <!-- String for TimeLineActivity -->
    <string name="colectivos_activity_label">Colectivos</string>
    <string name="instituciones_activity_label">Instituciones</string>
     <string name="profile_activity_button">Perfil</string>

</resources>