<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.gov.wemake.wemakeapp.activities.ProfileActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lbl_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/name_label"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/txt_edit_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/name_label" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/txt_edit_lastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/last_hint_label" >
                </EditText>
            </LinearLayout>

            <co.gov.wemake.wemakeapp.activities.customcomponents.RoundedImageView
                android:id="@+id/iv_edit_profile_picture"
                android:layout_width="154dp"
                android:layout_height="154dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:onClick="changeProfilePicture"
                android:src="@drawable/default_profile" />

            <TextView
                android:id="@+id/lbl_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/email_label"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txt_edit_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email_label"
                android:inputType="textEmailAddress" >
            </EditText>

            <TextView
                android:id="@+id/lbl_profession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/profession_label2"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/ac_edit_professions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/profession_hint_label" />

            <TextView
                android:id="@+id/lbl_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/skills_label2"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/ac_edit_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/skills_hint_label" />

            <TextView
                android:id="@+id/lbl_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/city_label"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/ac_edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/city_hint_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/btn_save_information"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="saveEditedInformation"
                    android:src="@drawable/ic_launcher" />

                <ImageView
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="cancelEditProcess"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>