<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lbl_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/state_label" />

            <AutoCompleteTextView
                android:id="@+id/ac_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:completionThreshold="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/state_hint_label" >
            </AutoCompleteTextView>

            <AutoCompleteTextView
                android:id="@+id/ac_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:completionThreshold="1"
                android:ems="10"
                android:hint="@string/city_hint_label" >

                <requestFocus />
            </AutoCompleteTextView>

            <AutoCompleteTextView
                android:id="@+id/ac_neighborhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:completionThreshold="1"
                android:ems="10"
                android:hint="@string/neighborhood_hint_label" >

                <requestFocus />
            </AutoCompleteTextView>

            <ImageView
                android:id="@+id/btn_next_third_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>